tests/incremental_delete/incremental_delete.exp

Initial status:
Error -------------------------------------------------------------------------------------------------------- a.js:2:17

Cannot assign `0` to `a` because number [1] is incompatible with string [2]. [incompatible-type]

   a.js:2:17
   2| var a: string = 0;
                      ^ [1]

References:
   a.js:2:8
   2| var a: string = 0;
             ^^^^^^ [2]


Error -------------------------------------------------------------------------------------------------------- b.js:3:17

Cannot assign `a` to `b` because string [1] is incompatible with number [2]. [incompatible-type]

   b.js:3:17
   3| var b: number = a;
                      ^

References:
   a.js:2:8
   2| var a: string = 0;
             ^^^^^^ [1]
   b.js:3:8
   3| var b: number = a;
             ^^^^^^ [2]


Error -------------------------------------------------------------------------------------------------------- c.js:3:17

Cannot assign `b` to `c` because number [1] is incompatible with string [2]. [incompatible-type]

   c.js:3:17
   3| var c: string = b;
                      ^

References:
   b.js:3:8
   3| var b: number = a;
             ^^^^^^ [1]
   c.js:3:8
   3| var c: string = b;
             ^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- dupe2.js:1:1

Duplicate module provider for `Dupe`. Change either this module provider or the current module provider [1].
[duplicate-module]

   dupe2.js:1:1
   1| /**
      

References:
   dupe1.js:1:1
   1| /**
       [1]



Found 4 errors

Delete c.js:
Error -------------------------------------------------------------------------------------------------------- a.js:2:17

Cannot assign `0` to `a` because number [1] is incompatible with string [2]. [incompatible-type]

   a.js:2:17
   2| var a: string = 0;
                      ^ [1]

References:
   a.js:2:8
   2| var a: string = 0;
             ^^^^^^ [2]


Error -------------------------------------------------------------------------------------------------------- b.js:3:17

Cannot assign `a` to `b` because string [1] is incompatible with number [2]. [incompatible-type]

   b.js:3:17
   3| var b: number = a;
                      ^

References:
   a.js:2:8
   2| var a: string = 0;
             ^^^^^^ [1]
   b.js:3:8
   3| var b: number = a;
             ^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- dupe2.js:1:1

Duplicate module provider for `Dupe`. Change either this module provider or the current module provider [1].
[duplicate-module]

   dupe2.js:1:1
   1| /**
      

References:
   dupe1.js:1:1
   1| /**
       [1]



Found 3 errors

Delete b.js:
Error -------------------------------------------------------------------------------------------------------- a.js:2:17

Cannot assign `0` to `a` because number [1] is incompatible with string [2]. [incompatible-type]

   a.js:2:17
   2| var a: string = 0;
                      ^ [1]

References:
   a.js:2:8
   2| var a: string = 0;
             ^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- dupe2.js:1:1

Duplicate module provider for `Dupe`. Change either this module provider or the current module provider [1].
[duplicate-module]

   dupe2.js:1:1
   1| /**
      

References:
   dupe1.js:1:1
   1| /**
       [1]



Found 2 errors

Restore b.js:
Error -------------------------------------------------------------------------------------------------------- a.js:2:17

Cannot assign `0` to `a` because number [1] is incompatible with string [2]. [incompatible-type]

   a.js:2:17
   2| var a: string = 0;
                      ^ [1]

References:
   a.js:2:8
   2| var a: string = 0;
             ^^^^^^ [2]


Error -------------------------------------------------------------------------------------------------------- b.js:3:17

Cannot assign `a` to `b` because string [1] is incompatible with number [2]. [incompatible-type]

   b.js:3:17
   3| var b: number = a;
                      ^

References:
   a.js:2:8
   2| var a: string = 0;
             ^^^^^^ [1]
   b.js:3:8
   3| var b: number = a;
             ^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- dupe2.js:1:1

Duplicate module provider for `Dupe`. Change either this module provider or the current module provider [1].
[duplicate-module]

   dupe2.js:1:1
   1| /**
      

References:
   dupe1.js:1:1
   1| /**
       [1]



Found 3 errors

Restore c.js:
Error -------------------------------------------------------------------------------------------------------- a.js:2:17

Cannot assign `0` to `a` because number [1] is incompatible with string [2]. [incompatible-type]

   a.js:2:17
   2| var a: string = 0;
                      ^ [1]

References:
   a.js:2:8
   2| var a: string = 0;
             ^^^^^^ [2]


Error -------------------------------------------------------------------------------------------------------- b.js:3:17

Cannot assign `a` to `b` because string [1] is incompatible with number [2]. [incompatible-type]

   b.js:3:17
   3| var b: number = a;
                      ^

References:
   a.js:2:8
   2| var a: string = 0;
             ^^^^^^ [1]
   b.js:3:8
   3| var b: number = a;
             ^^^^^^ [2]


Error -------------------------------------------------------------------------------------------------------- c.js:3:17

Cannot assign `b` to `c` because number [1] is incompatible with string [2]. [incompatible-type]

   c.js:3:17
   3| var c: string = b;
                      ^

References:
   b.js:3:8
   3| var b: number = a;
             ^^^^^^ [1]
   c.js:3:8
   3| var c: string = b;
             ^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- dupe2.js:1:1

Duplicate module provider for `Dupe`. Change either this module provider or the current module provider [1].
[duplicate-module]

   dupe2.js:1:1
   1| /**
      

References:
   dupe1.js:1:1
   1| /**
       [1]



Found 4 errors

Delete d.json:
Error -------------------------------------------------------------------------------------------------------- a.js:2:17

Cannot assign `0` to `a` because number [1] is incompatible with string [2]. [incompatible-type]

   a.js:2:17
   2| var a: string = 0;
                      ^ [1]

References:
   a.js:2:8
   2| var a: string = 0;
             ^^^^^^ [2]


Error -------------------------------------------------------------------------------------------------------- b.js:3:17

Cannot assign `a` to `b` because string [1] is incompatible with number [2]. [incompatible-type]

   b.js:3:17
   3| var b: number = a;
                      ^

References:
   a.js:2:8
   2| var a: string = 0;
             ^^^^^^ [1]
   b.js:3:8
   3| var b: number = a;
             ^^^^^^ [2]


Error -------------------------------------------------------------------------------------------------------- c.js:3:17

Cannot assign `b` to `c` because number [1] is incompatible with string [2]. [incompatible-type]

   c.js:3:17
   3| var c: string = b;
                      ^

References:
   b.js:3:8
   3| var b: number = a;
             ^^^^^^ [1]
   c.js:3:8
   3| var c: string = b;
             ^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- dupe2.js:1:1

Duplicate module provider for `Dupe`. Change either this module provider or the current module provider [1].
[duplicate-module]

   dupe2.js:1:1
   1| /**
      

References:
   dupe1.js:1:1
   1| /**
       [1]



Found 4 errors

Delete unchecked.js:
Error -------------------------------------------------------------------------------------------------------- a.js:2:17

Cannot assign `0` to `a` because number [1] is incompatible with string [2]. [incompatible-type]

   a.js:2:17
   2| var a: string = 0;
                      ^ [1]

References:
   a.js:2:8
   2| var a: string = 0;
             ^^^^^^ [2]


Error -------------------------------------------------------------------------------------------------------- b.js:3:17

Cannot assign `a` to `b` because string [1] is incompatible with number [2]. [incompatible-type]

   b.js:3:17
   3| var b: number = a;
                      ^

References:
   a.js:2:8
   2| var a: string = 0;
             ^^^^^^ [1]
   b.js:3:8
   3| var b: number = a;
             ^^^^^^ [2]


Error -------------------------------------------------------------------------------------------------------- c.js:3:17

Cannot assign `b` to `c` because number [1] is incompatible with string [2]. [incompatible-type]

   c.js:3:17
   3| var c: string = b;
                      ^

References:
   b.js:3:8
   3| var b: number = a;
             ^^^^^^ [1]
   c.js:3:8
   3| var c: string = b;
             ^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- dupe2.js:1:1

Duplicate module provider for `Dupe`. Change either this module provider or the current module provider [1].
[duplicate-module]

   dupe2.js:1:1
   1| /**
      

References:
   dupe1.js:1:1
   1| /**
       [1]


Error --------------------------------------------------------------------------------------- requires_unchecked.js:5:25

Cannot resolve module `Unchecked`. [cannot-resolve-module]

   5| var unchecked = require('Unchecked');
                              ^^^^^^^^^^^



Found 5 errors

Restore unchecked.js:
Error -------------------------------------------------------------------------------------------------------- a.js:2:17

Cannot assign `0` to `a` because number [1] is incompatible with string [2]. [incompatible-type]

   a.js:2:17
   2| var a: string = 0;
                      ^ [1]

References:
   a.js:2:8
   2| var a: string = 0;
             ^^^^^^ [2]


Error -------------------------------------------------------------------------------------------------------- b.js:3:17

Cannot assign `a` to `b` because string [1] is incompatible with number [2]. [incompatible-type]

   b.js:3:17
   3| var b: number = a;
                      ^

References:
   a.js:2:8
   2| var a: string = 0;
             ^^^^^^ [1]
   b.js:3:8
   3| var b: number = a;
             ^^^^^^ [2]


Error -------------------------------------------------------------------------------------------------------- c.js:3:17

Cannot assign `b` to `c` because number [1] is incompatible with string [2]. [incompatible-type]

   c.js:3:17
   3| var c: string = b;
                      ^

References:
   b.js:3:8
   3| var b: number = a;
             ^^^^^^ [1]
   c.js:3:8
   3| var c: string = b;
             ^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- dupe2.js:1:1

Duplicate module provider for `Dupe`. Change either this module provider or the current module provider [1].
[duplicate-module]

   dupe2.js:1:1
   1| /**
      

References:
   dupe1.js:1:1
   1| /**
       [1]



Found 4 errors

Delete dupe2.js:
Error -------------------------------------------------------------------------------------------------------- a.js:2:17

Cannot assign `0` to `a` because number [1] is incompatible with string [2]. [incompatible-type]

   a.js:2:17
   2| var a: string = 0;
                      ^ [1]

References:
   a.js:2:8
   2| var a: string = 0;
             ^^^^^^ [2]


Error -------------------------------------------------------------------------------------------------------- b.js:3:17

Cannot assign `a` to `b` because string [1] is incompatible with number [2]. [incompatible-type]

   b.js:3:17
   3| var b: number = a;
                      ^

References:
   a.js:2:8
   2| var a: string = 0;
             ^^^^^^ [1]
   b.js:3:8
   3| var b: number = a;
             ^^^^^^ [2]


Error -------------------------------------------------------------------------------------------------------- c.js:3:17

Cannot assign `b` to `c` because number [1] is incompatible with string [2]. [incompatible-type]

   c.js:3:17
   3| var c: string = b;
                      ^

References:
   b.js:3:8
   3| var b: number = a;
             ^^^^^^ [1]
   c.js:3:8
   3| var c: string = b;
             ^^^^^^ [2]



Found 3 errors

Restore dupe2.js:
Error -------------------------------------------------------------------------------------------------------- a.js:2:17

Cannot assign `0` to `a` because number [1] is incompatible with string [2]. [incompatible-type]

   a.js:2:17
   2| var a: string = 0;
                      ^ [1]

References:
   a.js:2:8
   2| var a: string = 0;
             ^^^^^^ [2]


Error -------------------------------------------------------------------------------------------------------- b.js:3:17

Cannot assign `a` to `b` because string [1] is incompatible with number [2]. [incompatible-type]

   b.js:3:17
   3| var b: number = a;
                      ^

References:
   a.js:2:8
   2| var a: string = 0;
             ^^^^^^ [1]
   b.js:3:8
   3| var b: number = a;
             ^^^^^^ [2]


Error -------------------------------------------------------------------------------------------------------- c.js:3:17

Cannot assign `b` to `c` because number [1] is incompatible with string [2]. [incompatible-type]

   c.js:3:17
   3| var c: string = b;
                      ^

References:
   b.js:3:8
   3| var b: number = a;
             ^^^^^^ [1]
   c.js:3:8
   3| var c: string = b;
             ^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- dupe2.js:1:1

Duplicate module provider for `Dupe`. Change either this module provider or the current module provider [1].
[duplicate-module]

   dupe2.js:1:1
   1| /**
      

References:
   dupe1.js:1:1
   1| /**
       [1]



Found 4 errors

Done!
